# MyLeague

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: my_league_app_main.cc  my_league_main.cc
include/: handler.h  riot_parser.h
include/core/: api_handler.h  champion.h  champion_filterer.h  input_handler.h  ranked_league.h  ranked_league_container.h  riot_parser.h  statistics_analyzer.h  summoner_info.h
include/interface/: champion_screen.h  main_screen.h  my_league_app.h  screen.h  summoner_screen.h
src/: handler.cc  riot_parser.cpp
src/core/: api_handler.cc  champion.cc  champion_filterer.cc  handler.cc  input_handler.cc  ranked_league.cc  ranked_league_container.cc  riot_parser.cc  riot_parser.cpp  statistics_analyzer.cc  summoner_info.cc
src/interface/: champion_screen.cc  main_screen.cc  my_league_app.cc  screen.cc  summoner_screen.cc
tests/: test_api_handler.cc  test_champion.cc  test_champion_filterer.cc  test_handler.cc  test_ranked_league.cc  test_riot_parser.cc  test_statistics_analyzer.cc
